--- a/recipes/beef-steak.html
+++ b/recipes/beef-steak.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Beef Steak Recipe</h1>
 
-        <img src="images/beef-stake.jpg" alt="a super delicious beef steak" width="200">
+        <img src="../images/beef-steak.jpg" alt="a super delicious beef steak" width="200">
 
         <p></p>
         
