--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Lasagna Recipe</h1>
 
-        <img src="images/lasagna.jpg" alt="a tasty looking lasagna" width="200">
+        <img src="../images/lasagna.jpeg" alt="a tasty looking lasagna" width="200">
 
         <p>In this web page, we are going to help you how to cook our favorite food called lasagna using the recipes provided and following these instructions.</p>
         <h2>Ingredients</h2>
