--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Spaghetti Recipe</h1>
 
-        <img src="images/spaghetti.jpeg" alt="a tasty looking spaghetti" width="200">
+        <img src="../images/spaghetti.jpeg" alt="a tasty looking spaghetti" width="200">
 
         <p>Who wouldn't eat a spaghetti?! In every occasions and celebrations, spaghetti is always there to fill the stomachs of our guests. So here are the following ingredients and steps to make a delicious spaghetti.</p>
         
